setting up soccer-app cmp to render list and preview cmps

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -1,19 +1,20 @@
 // Externals
 
 // Setup
-@import "setup/variables";
-@import "setup/functions";
-@import "setup/mixins";
+@import "scss/setup/variables";
+@import "scss/setup/functions";
+@import "scss/setup/mixins";
 
 // Basics
-@import "basics/typography";
-@import "basics/base";
-@import "basics/helpers";
-@import "basics/layout";
-@import "basics/modals";
-@import "basics/animations";
+@import "scss/basics/typography";
+@import "scss/basics/base";
+@import "scss/basics/helpers";
+@import "scss/basics/layout";
+@import "scss/basics/modals";
+@import "scss/basics/animations";
 
 // Pages
-
+@import "scss/pages/soccerTeamApp";
 
 // Components
+@import "scss/components/appNav";
