--- a/src/assets/scss/setup/_variables.scss
+++ b/src/assets/scss/setup/_variables.scss
@@ -1,9 +1,9 @@
 // Colors
-$clr1: #e01e5a;
+$bg-color: rgb(114, 146, 37);
 $clr2: #293241;
 $clr3: #5c3fc5;
 $clr4: #696969;
-$clr5: #e6e9ec;
+$navColor: #e6e9ec;
 
 $navHeight: 65px;
 
