--- a/src/assets/scss/basics/_layout.scss
+++ b/src/assets/scss/basics/_layout.scss
@@ -1,6 +1,6 @@
 .container {
-    max-width: $normal-breakpoint;
-    margin: 0 auto;
+    max-width: $mobile-breakpoint;
+    // margin: 0 auto;
     // padding-left: 10px;
     // padding-right: 10px;
     // padding: 20px;
