Added design to login page (might be changed later) Added the option to get weather data from API (Weather.jsx, weatherService.js) Started working on option to register to a game

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -15,6 +15,7 @@
 
 // Pages
 @import "scss/pages/soccerTeamApp";
+@import "scss/pages/loginPage";
 
 // Components
 @import "scss/components/appNav";
