Configured TailWindCSS, added design to the app

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -1,21 +1,21 @@
-// Externals
+// // Externals
 
-// Setup
-@import "scss/setup/variables";
-@import "scss/setup/functions";
-@import "scss/setup/mixins";
+// // Setup
+// @import "scss/setup/variables";
+// @import "scss/setup/functions";
+// @import "scss/setup/mixins";
 
-// Basics
-@import "scss/basics/typography";
-@import "scss/basics/base";
-@import "scss/basics/helpers";
-@import "scss/basics/layout";
-@import "scss/basics/modals";
-@import "scss/basics/animations";
+// // Basics
+// @import "scss/basics/typography";
+// @import "scss/basics/base";
+// @import "scss/basics/helpers";
+// @import "scss/basics/layout";
+// @import "scss/basics/modals";
+// @import "scss/basics/animations";
 
-// Pages
-@import "scss/pages/soccerTeamApp";
-@import "scss/pages/loginPage";
+// // Pages
+// @import "scss/pages/soccerTeamApp";
+// @import "scss/pages/loginPage";
 
-// Components
-@import "scss/components/appNav";
+// // Components
+// @import "scss/components/appNav";
