--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,22 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: 'blue'
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer components {
+
+  .button {
+    @apply w-40 sm:w-52 rounded-md font-medium my-4 py-3
+  }
+
+  .button-main {
+   @apply bg-mainColor text-white 
+  }
+
+  .button-main:hover {
+    @apply bg-white text-mainColor outline outline-none outline-mainColor
+  }
 }
